--- a/official_website/package.json
+++ b/official_website/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "react": "^16.9.0",
+    "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.2"
+    "react-horizontal-scrolling-menu": "^0.7.3",
+    "react-scripts": "3.1.2",
+    "react-scroll-horizontal": "^1.6.2"
   },
   "scripts": {
     "start": "react-scripts start",
