--- a/official_website/package.json
+++ b/official_website/package.json
@@ -7,9 +7,11 @@
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
+    "react-browser-router": "^2.1.2",
     "react-dom": "^16.9.0",
     "react-grid-system": "^5.0.2",
     "react-horizontal-scrolling-menu": "^0.7.3",
+    "react-router-dom": "^5.1.0",
     "react-scripts": "3.1.2",
     "react-scroll-horizontal": "^1.6.2"
   },
