--- a/official_website/package.json
+++ b/official_website/package.json
@@ -2,6 +2,10 @@
   "name": "official_website",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "6.4.1",
+    "node": "11.3.0"
+  },
   "dependencies": {
     "bootstrap": "^4.3.1",
     "node-sass": "^4.12.0",
