--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-browser-router": "^2.1.2",
     "react-dom": "^16.9.0",
     "react-grid-system": "^5.0.2",
+    "react-helmet": "^5.2.1",
     "react-horizontal-scrolling-menu": "^0.7.3",
     "react-router-dom": "^5.1.0",
     "react-scripts": "3.1.2",
