--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node": "11.3.0"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
     "bootstrap": "^4.4.1",
     "mdbreact": "^5.0.2",
     "node-sass": "^4.13.1",
