--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap": "^1.0.0-beta.16",
     "react-browser-router": "^2.1.2",
     "react-dom": "^16.12.0",
+    "react-ga": "^3.3.0",
     "react-grid-system": "^5.0.2",
     "react-helmet": "^5.2.1",
     "react-horizontal-scrolling-menu": "^0.7.5",
