--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.4.1",
     "latest-version": "^6.0.0",
     "react": "^16.12.0",
+    "react-background-video-player": "^1.1.7",
     "react-bootstrap": "^1.5.2",
     "react-browser-router": "^2.1.2",
     "react-dom": "^16.12.0",
@@ -19,6 +20,7 @@
     "react-helmet": "^5.2.1",
     "react-horizontal-scrolling-menu": "^0.7.5",
     "react-icons": "^3.11.0",
+    "react-player": "^2.9.0",
     "react-responsive-carousel": "^3.2.21",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^4.0.3",
