--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^3.11.0",
     "react-player": "^2.9.0",
     "react-responsive-carousel": "^3.2.21",
+    "react-responsive-modal-scroll": "^2.0.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^4.0.3",
     "react-scroll-horizontal": "^1.6.2",
