--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^4.0.3",
     "react-scroll-horizontal": "^1.6.2",
+    "react-zoom-pan-pinch": "^2.1.3",
     "sass": "^1.32.12"
   },
   "scripts": {
