--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@material-ui/core": "^4.11.4",
     "bootstrap": "^4.4.1",
     "latest-version": "^6.0.0",
+    "papaparse": "^5.3.2",
     "react": "^16.12.0",
     "react-background-video-player": "^1.1.7",
     "react-bootstrap": "^1.5.2",
