--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "^1.5.2",
     "react-browser-router": "^2.1.2",
     "react-dom": "^16.12.0",
+    "react-draggable": "^4.4.5",
     "react-ga": "^3.3.0",
     "react-grid-system": "^5.0.2",
     "react-helmet": "^5.2.1",
